--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello there</h1>
+    <h1>Hello Feature2 there</h1>
     <h2>Feature 2</h2>
 </body>
 </html>
